--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -23,14 +23,15 @@ jobs:
   # This workflow contains a single job called "greet"
   greet:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-latest  
+    env:
+      reponame: "${{ github.repository }}"
+    
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Runs a single command using the runners shell
     - name: Send greeting
       run: |
-        reponame = "${{ github.repository }}"
         echo $reponame
         echo "${{ github.repository }}"
         echo "${{ github.owenr }}"
