--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -35,10 +35,11 @@ jobs:
         echo $reponame 
         echo "${{ github.repository }}"
         echo "${{ github.repository_owner }}"
-        echo "${{ env.GITHUB_REPOSITORY_OWNER }}"
-        echo "${{ env.GITHUB_REPOSITORY }}"
-        echo "${{ vars.GITHUB_REPOSITORY_OWNER }}"
-        echo "${{ vars.GITHUB_REPOSITORY }}"
+        echo "${{ GITHUB_REPOSITORY_OWNER }}"
+        echo "${GITHUB_REPOSITORY_OWNER}"
+        echo "$GITHUB_REPOSITORY_OWNER"
+        echo "GITHUB_REPOSITORY_OWNER"
+        echo ${GITHUB_REPOSITORY#*\/}
     - name: Set outpu
       id: vars
       run: echo repo_name=${GITHUB_REPOSITORY#*\/} >> $GITHUB_OUTPUT
