--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -36,7 +36,7 @@ jobs:
         echo "${{ github.repository }}"
         echo "${{ github.repository_owner }}"
         echo "${{ GITHUB_REPOSITORY_OWNER }}"
-        echo "${GITHUB_REPOSITORY_OWNER}"
+     #   echo "${GITHUB_REPOSITORY_OWNER}"
      #   echo "$GITHUB_REPOSITORY_OWNER"
      #   echo ${GITHUB_REPOSITORY#*\/}
     - name: Set output
