--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -35,7 +35,7 @@ jobs:
         echo $reponame 
         echo "${{ github.repository }}"
         echo "${{ github.repository_owner }}"
-        echo "${{ GITHUB_REPOSITORY_OWNER }}"
+     #   echo "${{ GITHUB_REPOSITORY_OWNER }}"
      #   echo "${GITHUB_REPOSITORY_OWNER}"
      #   echo "$GITHUB_REPOSITORY_OWNER"
      #   echo ${GITHUB_REPOSITORY#*\/}
