--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -35,10 +35,11 @@ jobs:
         echo $reponame 
         echo "${{ github.repository }}"
         echo "${{ github.repository_owner }}"
+        echo ${GITHUB_REPOSITORY#*\/}
      #   echo "${{ GITHUB_REPOSITORY_OWNER }}"
      #   echo "${GITHUB_REPOSITORY_OWNER}"
      #   echo "$GITHUB_REPOSITORY_OWNER"
-     #   echo ${GITHUB_REPOSITORY#*\/}
+        
     - name: Set output
       id: vars
       run: echo repo_name=${GITHUB_REPOSITORY#*\/} >> $GITHUB_OUTPUT
