--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,7 +25,8 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest  
     env:
-      reponame: "${{ github.repository }}" 
+      reponame: ${GITHUB_REPOSITORY#*\/}
+      # "${{ github.repository }}" 
     
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -36,8 +37,7 @@ jobs:
         echo "${{ github.repository }}"
         echo "${{ github.repository_owner }}"
         echo ${GITHUB_REPOSITORY#*\/}
-     #   echo "${{ GITHUB_REPOSITORY_OWNER }}"
-     #   echo "${GITHUB_REPOSITORY_OWNER}"
+        echo "${GITHUB_REPOSITORY_OWNER}"
      #   echo "$GITHUB_REPOSITORY_OWNER"
         
     - name: Set output
