--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -9,13 +9,9 @@ on:
     # Inputs the workflow accepts.
     inputs:
       name:
-        # Friendly description to be shown in the UI instead of 'name'
         description: 'Person to greet'
-        # Default value if no value is explicitly provided
         default: 'World'
-        # Input has to be provided for the workflow to run
         required: true
-        # The data type of the input
         type: string
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -45,3 +41,7 @@ jobs:
       run: echo repo_name=${GITHUB_REPOSITORY#*\/} >> $GITHUB_OUTPUT
     - name: Test set output
       run: echo ${{ steps.vars.outputs.repo_name }}
+    - name: Set ENV output
+      run: echo repo_name2=${GITHUB_REPOSITORY#*\/} >> $GITHUB_ENV
+    - name: Test set output
+      run: echo ${{ env.repo_name2 }}
