--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -8,12 +8,22 @@ on:
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
-      name:
-        description: 'Person to greet'
-        default: 'World'
+      Vendor:
+        description: 'Vendor'
+        default: ''
         required: true
         type: string
-
+      Product:
+        description: 'Product'
+        default: ''
+        required: true
+        type: string
+      Version:
+        description: 'Version'
+        default: ''
+        required: true
+        type: string
+        
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "greet"
@@ -34,14 +44,9 @@ jobs:
         echo "${{ github.repository_owner }}"
         echo ${GITHUB_REPOSITORY#*\/}
         echo "${GITHUB_REPOSITORY_OWNER}"
-     #   echo "$GITHUB_REPOSITORY_OWNER"
-        
-    - name: Set output
-      id: vars
-      run: echo repo_name=${GITHUB_REPOSITORY#*\/} >> $GITHUB_OUTPUT
-    - name: Test set output
-      run: echo ${{ steps.vars.outputs.repo_name }}
+        echo "$Vendor_$Product_$Version"
+
     - name: Set ENV output
-      run: echo repo_name2=${GITHUB_REPOSITORY#*\/} >> $GITHUB_ENV
+      run: echo repo_name1=${GITHUB_REPOSITORY#*\/} >> $GITHUB_ENV
     - name: Test set output
-      run: echo ${{ env.repo_name2 }}
+      run: echo ${{ env.repo_name1 }}
