--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -38,4 +38,4 @@ jobs:
         echo ${{ github.event.inputs.vendor }} 
         echo ${{ github.event.inputs.product }}
         echo ${{ github.event.inputs.version }}
-        echo "${{ github.event.inputs.version }}_"
+        echo "${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}"
