--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -47,4 +47,4 @@ jobs:
         # git mv "./Deploy-Application.exe" "./${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}.exe"
         # git mv "Deploy-Application.exe.config" "${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}.exe.config"
         # git commit -m "Renamed" --author="${{ github.triggering_actor }}"
-        # git push origin master
+        # git push
