--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Rename files
      # working-directory: ./
       run: |
-        # git mv "./Deploy-Application.exe" "./${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}.exe"
+        # git mv "./Deploy-Application.exe1" "./${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}.exe"
         # git mv "Deploy-Application.exe.config1" "${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}.exe.config"
         # git commit -m "Renamed" --author="${{ github.triggering_actor }}"
         # git push
