--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Rename files
      # working-directory: ./
       run: |
-        # mv "./Deploy-Application.exe1" "./${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}.exe"
+         mv "./Deploy-Application.exe1" "./${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}.exe"
         # git mv "Deploy-Application.exe.config" "${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}.exe.config"
         # git commit -a -m "Renamed" --author="${{ github.triggering_actor }}"
         # git push
