--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -41,10 +41,15 @@ jobs:
         echo ${{ github.event.inputs.product }}
         echo ${{ github.event.inputs.version }} echo "${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}"
         echo ${{ github.triggering_actor }}
+        
     - name: Rename files
      # working-directory: ./
       run: |
+        git config user.name $NAME
+        git config user.email $EMAIL
+        echo {{ inputs.name }}
+        echo {{ inputs.email }}
         mv "./Deploy-Application.exe" "./${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}.exe"
-        git mv "Deploy-Application.exe.config" "${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}.exe.config"
-        git commit -a -m "Renamed" --author="${{ github.triggering_actor }}"
-        git push
+        #git mv "Deploy-Application.exe.config" "${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}.exe.config"
+        #git commit -a -m "Renamed" --author="${{ github.triggering_actor }}"
+        #git push
