--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -46,9 +46,9 @@ jobs:
      # working-directory: ./
       run: |
         git config user.name $NAME
-        git config user.email $EMAIL
+        # git config user.email $EMAIL
         echo {{ inputs.name }}
-        echo {{ inputs.email }}
+        # echo {{ inputs.email }}
         mv "./Deploy-Application.exe" "./${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}.exe"
         #git mv "Deploy-Application.exe.config" "${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}.exe.config"
         #git commit -a -m "Renamed" --author="${{ github.triggering_actor }}"
