--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Reveiw output
       run: |
         echo ${{ env.repo_name }}
-        echo ${{ inputs.vendor }} 
+        echo ${{ github.event.inputs.vendor }} 
         echo user_name=git config user.name >> $GITHUB_ENV
         echo ${{ env.user_name }}
         echo ${{ github.event.inputs.product }}
