--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -33,13 +33,14 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Set repo_name
-      run: echo repo_name=${GITHUB_REPOSITORY#*\/} >> $GITHUB_ENV
+      run: |
+        echo repo_name=${GITHUB_REPOSITORY#*\/} >> $GITHUB_ENV
+        echo user_name=git config user.name >> $GITHUB_ENV
     - name: Reveiw output
       run: |
         echo ${{ env.repo_name }}
-        echo ${{ github.event.inputs.vendor }} 
-        echo user_name=git config user.name >> $GITHUB_ENV
         echo ${{ env.user_name }}
+        echo ${{ github.event.inputs.vendor }} 
         echo ${{ github.event.inputs.product }}
         echo ${{ github.event.inputs.version }} echo "${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}"
         echo ${{ github.triggering_actor }}
