--- a/.github/workflows/Setup.yml
+++ b/.github/workflows/Setup.yml
@@ -39,7 +39,8 @@ jobs:
       run: |
         echo ${{ github.event.inputs.vendor }} 
         echo ${{ github.event.inputs.product }}
-        echo ${{ github.event.inputs.version }} echo "${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}"
+        echo ${{ github.event.inputs.version }} 
+        echo "${{ github.event.inputs.vendor }}_${{ github.event.inputs.product }}_${{ github.event.inputs.version }}"
         
     - name: Rename files
 
